[gd_scene load_steps=10 format=3 uid="uid://b68iv11s7a68k"]

[ext_resource type="Script" uid="uid://xf15u7hciort" path="res://Scripts/slime_voador.gd" id="1_pkvpv"]
[ext_resource type="Texture2D" uid="uid://caqtjye4hw5iw" path="res://assets/sprites/Unicos/EstrelaAlien.png" id="3_pfjf2"]
[ext_resource type="Script" uid="uid://b7h1g1orwdil5" path="res://Scripts/HealthSystem.gd" id="3_uluyl"]
[ext_resource type="Script" uid="uid://pip2keyhbfpa" path="res://Scripts/health_bar.gd" id="4_6g6d1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tygpv"]
atlas = ExtResource("3_pfjf2")
region = Rect2(0, 0, 955, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkvpv"]
atlas = ExtResource("3_pfjf2")
region = Rect2(0, 0, 900, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfjf2"]
atlas = ExtResource("3_pfjf2")
region = Rect2(910, 0, 900, 1080)

[sub_resource type="SpriteFrames" id="SpriteFrames_tygpv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tygpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkvpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfjf2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swwnm"]
size = Vector2(28, 30)

[node name="slimeVoador" type="CharacterBody2D" groups=["enemies", "flying_enemies"]]
script = ExtResource("1_pkvpv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
position = Vector2(4, -2.5)
scale = Vector2(0.0565445, 0.0564815)
sprite_frames = SubResource("SpriteFrames_tygpv")
animation = &"idle"
autoplay = "idle"

[node name="colisaoInimigo" type="CollisionShape2D" parent="."]
position = Vector2(8, -3)
shape = SubResource("RectangleShape2D_swwnm")
one_way_collision = true

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="colisaoMorte" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(8, -3)
shape = SubResource("RectangleShape2D_swwnm")
one_way_collision = true

[node name="HealthSystem" type="Node" parent="."]
script = ExtResource("3_uluyl")
max_health = 20.0

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -14.0
offset_top = -8.0
offset_right = 15.0
offset_bottom = -4.0
show_percentage = false
script = ExtResource("4_6g6d1")

[connection signal="body_entered" from="Hitbox" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
